[package]
name = "arclassic"
version = "0.1.0"
authors = ["gannio <gannioSoftware@gmail.com>", "Ali Hussain (Coolsonickirby/Random) <alihussain2001@gmail.com>", "jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[keyboard]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
ramhorns = "=0.10.0"
percent-encoding = "=2.1.0"
lazy_static = "1.4.0"
walkdir = "2"
rand = { git = "https://github.com/skyline-rs/rand" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true